[tool.poetry]
name = "bluerally-backend"
version = "0.1.0"
description = ""
authors = ["jin <audwls624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.104.1"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"
pytest = "^7.4.3"
httpx = "^0.25.2"
authlib = "^1.2.1"
jinja2 = "^3.1.2"
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
aiohttp = "^3.9.1"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
aiomysql = "^0.2.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
bcrypt = "^4.1.2"
mypy = "^1.8.0"
python-jose = "^3.3.0"
itsdangerous = "^2.1.2"
redis = "^5.0.1"
fakeredis = "^2.20.1"
types-redis = "^4.6.0.20240106"
boto3 = ">=1.33.2,<1.34.35"
aioboto3 = "^12.3.0"
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
motor = "^3.3.2"
pymongo = {extras = ["srv"], version = "^4.6.3"}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"

[tool.aerich]
tortoise_orm = "common.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ref: https://beta.ruff.rs/docs/rules/
select = ["B", "C4", "E", "F", "N", "I", "W", "UP"]
ignore = ["F403","F405","E501","E402"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
unfixable = []

per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
package_root = "."
ignore_missing_imports = true
disable_error_code = ["misc"]

# for strict mypy: (this is the tricky one :-))
#disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
